--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "name": "defold-prng",
     "version": "1.0.0",
+    "description": "Types for Defold psuedo-random number generator extension using the Mulberry32 method",
+    "license": "CC0-1.0",
     "types": "./@types/defold-prng.d.ts"
 }
