--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
     "version": "1.0.0",
     "description": "Types for Defold psuedo-random number generator extension using the Mulberry32 method",
     "license": "CC0-1.0",
-    "types": "./@types/defold-prng.d.ts"
+    "types": "./@types/prng.d.ts"
 }
