--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-    "name": "defold-prng",
-    "version": "1.0.0",
-    "description": "Types for Defold psuedo-random number generator extension using the Mulberry32 method",
-    "license": "CC0-1.0",
-    "types": "./@types/prng.d.ts"
+	"name": "@types/defold-prng",
+	"version": "1.0.0",
+	"description": "Types for Defold psuedo-random number generator extension using the Mulberry32 method",
+	"license": "CC0-1.0",
+	"files": ["**/*.d.ts"],
+	"types": "./@types/prng.d.ts",
+	"main": "./@types/prng"
 }
