--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -2,11 +2,12 @@ name: Build with bob
 
 on:
   push:
-  pull_request_target:
-
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
 env:
-  VERSION_FILENAME: "info.json"
-  BUILD_SERVER: "https://build.defold.com"
+  BUILD_SERVER: 'https://build.defold.com'
 
 jobs:
   build_with_bob:
@@ -20,56 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
-          java-version: "17"
-
-      - name: Get Defold version
-        run: |
-          TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
-          echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
-          echo "Found version ${TMPVAR}"
-
-      - name: Download bob.jar
-        run: |
-          wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
-          java -jar bob.jar --version
-
-      - name: Resolve libraries
-        run: java -jar bob.jar resolve --email a@b.com --auth 123456
-      - name: Build
-        run: java -jar bob.jar --platform=${{ matrix.platform }} build --archive --build-server=${{env.BUILD_SERVER}}
-      - name: Bundle
-        run: java -jar bob.jar --platform=${{ matrix.platform }} bundle
-
-  # macOS is not technically needed for building, but we want to test bundling as well, since we're also testing the manifest merging
-  build_with_bob_macos:
-    strategy:
-      matrix:
-        platform: [armv7-darwin, x86_64-darwin]
-    runs-on: macOS-latest
-
-    name: Build
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          java-version: "17"
-
-      - name: Get Defold version
-        run: |
-          TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
-          echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
-          echo "Found version ${TMPVAR}"
-
-      - name: Download bob.jar
-        run: |
-          wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
-          java -jar bob.jar --version
-
-      - name: Resolve libraries
-        run: java -jar bob.jar resolve --email a@b.com --auth 123456
-      - name: Build
-        run: java -jar bob.jar --platform=${{ matrix.platform }} build --archive --build-server=${{env.BUILD_SERVER}}
-      - name: Bundle
-        run: java -jar bob.jar --platform=${{ matrix.platform }} bundle
+          distribution: 'temurin'
+          java-version: '17'
+      - uses: dapetcu21/setup-defold@v3.0.3
+      - run: java -jar $BOB --platform=${{ matrix.platform }} build --build-server=${{env.BUILD_SERVER}}
