--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@
 # Exclude files from archive
 _docs export-ignore
 .github export-ignore
+.husky export-ignore
 .vscode export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
@@ -18,3 +19,4 @@ _docs export-ignore
 .prettierrc.json export-ignore
 tsconfig.json export-ignore
 yarn.lock export-ignore
+commitlint.config.mjs export-ignore
